TFP-6405: WIP Flytte ap for refusjonsfrist * Oppretter nytt ap for refusjonsfrist som flyttes til samme steg som annet refusjons-ap * Vi skal heller trolig inkludere refusjonsfrist i eksisterende refusjons-ap, og todos ligger inne for dette * Lagt inn mapping av refusjonsfrist til samme sted som mapping av annen refusjon